src/objects/Requirement_Response__c.object
<CustomObject>
    <description>Junction object between requirement and application.</description>
    <fields>
        <fullName>Admissions_Document__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Admissions Document associated with this requirement upload</description>
        <label>Admissions Document</label>
        <referenceTo>Admissions_Document__c</referenceTo>
        <relationshipLabel>Requirement Responses</relationshipLabel>
        <relationshipName>Requirement_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Status__c</fullName>
        <description>Pull in the Application Status so the &quot;Send Reminder Email&quot; flow can filter by status.</description>
        <formula>TEXT(Application__r.Application_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <description>Application this response is for.</description>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Requirement Responses</relationshipLabel>
        <relationshipName>Requirement_Responses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Archive_Payload__c</fullName>
        <label>Archive Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Child_Requirement_Fulfilled_On__c</fullName>
        <description>The date/time that a related object requirement item was fulfilled.</description>
        <inlineHelpText>The date/time that a related object requirement item was fulfilled.</inlineHelpText>
        <label>Child Requirement Fulfilled On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Document_Requirement_Fulfilled_On__c</fullName>
        <label>Document Requirement Fulfilled On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_Email__c</fullName>
        <label>External Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fulfilled_On__c</fullName>
        <description>The date/time this requirement item was completed.</description>
        <formula>CASE(Requirement_Item__r.RecordType.DeveloperName,
&quot;Question_Group&quot;, Question_Group_Requirement_Fulfilled_On__c,
&quot;Document_Upload&quot;, Document_Requirement_Fulfilled_On__c,
&quot;Related_Object&quot;, Child_Requirement_Fulfilled_On__c,
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The date/time this requirement item was completed.</inlineHelpText>
        <label>Fulfilled On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HasDocument__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HasDocument</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Child_Requirement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Child Requirement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hashcode__c</fullName>
        <label>Hashcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incomplete_Questions__c</fullName>
        <label>Incomplete Questions</label>
        <summaryFilterItems>
            <field>Question_Response__c.IsComplete__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Question_Response__c.Requirement_Response__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Question_Group_Requirement_Fulfilled_On__c</fullName>
        <description>The max date/time that a Question with IsRequired__c == true was fulfilled.</description>
        <inlineHelpText>The max date/time that a Question with IsRequired__c == true was fulfilled.</inlineHelpText>
        <label>Question Group Requirement Fulfilled On</label>
        <summarizedField>Question_Response__c.PopulatedOn__c</summarizedField>
        <summaryFilterItems>
            <field>Question_Response__c.PopulatedOn__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Question_Response__c.Requirement_Response__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Reference_Access_Rights__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Answer to the reference access rights question</description>
        <label>Reference Access Rights</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reference_First_Name__c</fullName>
        <description>Answer to the references first name question</description>
        <label>Reference First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Form_URL__c</fullName>
        <description>Displays URL for reference form VF page</description>
        <formula>$Setup.Application_Setting__c.Community_URL__c+&quot;/apex/ApplicationReference?contactId=&quot;+Application__r.Contact__c+&quot;&amp;applicationId=&quot;+Application__c+&quot;&amp;requirementId=&quot;+Requirement_Item__r.Requirement__c+&quot;&amp;r=&quot;+Requirement_Item__c+&quot;&amp;h=&quot;+Hashcode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Reference form that the recommender fills out</inlineHelpText>
        <label>Reference Form URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Last_Name__c</fullName>
        <description>Answer to reference&apos;s last name question</description>
        <label>Reference Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Reference object</description>
        <label>Reference</label>
        <referenceTo>Reference__c</referenceTo>
        <relationshipLabel>Requirement Responses</relationshipLabel>
        <relationshipName>Requirement_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requirement_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Item this response is for.</description>
        <label>Requirement Item</label>
        <referenceTo>Requirement_Item__c</referenceTo>
        <relationshipLabel>Requirement Responses</relationshipLabel>
        <relationshipName>Requirement_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_Reference__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Reference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ValueTextEntry__c</fullName>
        <label>Value</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Viewed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the applicant has viewed the requirement and related questions yet. Enables application architect to prevent submission until all requirements have been viewed.</description>
        <label>Viewed</label>
        <type>Checkbox</type>
    </fields>
    <label>Requirement Response</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RR-{0000000}</displayFormat>
        <label>Requirement Response Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requirement Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>